[package]
name = "fleet-edge-worker"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casey-digennaro/fleet-edge-worker"
edition = "2021"
description = "Edge compute worker for fleet distributed processing"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
